@@ -72,6 +72,8 @@ class CfgInGameUI
     class PeripheralVision
     {
         cueColor[] = {0,0,0,0};
+        cueFriendlyColor[] = {0,0,0,0};
+        cueEnemyColor[] = {0,0,0,0};
     };
 	
 	class MPTable
@@ -79,11 +81,17 @@ class CfgInGameUI
 		color[] = {0,0,0,0}; //{0.7,0.7,0.7,1};
 		colorTitleBg[] = {0,0,0,0}; //{0.1,0.15,0.15,1};
 		colorBg[] = {0,0,0,0}; //{0.1,0.15,0.1,0.9};
+		colorBorder[] = {0,0,0,0}; //{0.1,0.15,0.1,0.9};
 		colorSelected[] = {0,0,0,0}; //{0.7,0.7,0.7,0.4};
+		colorSeparator[] = {0,0,0,0}; //{0.7,0.7,0.7,0.4};
 		colorWest[] = {0,0,0,0}; //{0.7,0.95,0.7,1};
 		colorEast[] = {0,0,0,0}; //{0.95,0.7,0.7,1};
 		colorCiv[] = {0,0,0,0}; //{0.8,0.8,0.8,1};
 		colorRes[] = {0,0,0,0}; //{0.7,0.7,0.95,1};
+		hBg[] = {0,0,0,0};
+		wBg[] = {0,0,0,0};
+		yBg[] = {0,0,0,0};
+		xBg[] = {0,0,0,0};
 		font = "EtelkaNarrowMediumPro";
 		size = "0"; //"( 21 / 408 )";
 		class Columns
@@ -418,9 +426,9 @@ class CfgBuildingLoot {
 		};
 	};
 	class Supermarket: Default {
-		lootChance = 0.6;
+		lootChance = 0.5;
 		minRoaming = 2;
-		maxRoaming = 6;
+		maxRoaming = 5;
 		zombieChance = 0.3;
 		zombieClass[] = {"zZombie_Base","zZombie_Base","z_teacher","z_suit1","z_suit2"};
 		itemType[] = {
@@ -652,7 +660,7 @@ class CfgBuildingLoot {
 		minRoaming = 2;
 		maxRoaming = 6;
 		zombieClass[] = {"z_doctor","z_doctor","z_doctor"};
-		lootChance = 1;
+		lootChance = 0.6;
 		lootPos[] = {};
 		itemType[] =	{
 			{"","trash"},
@@ -669,7 +677,7 @@ class CfgBuildingLoot {
 		zombieChance = 0.3;
 		maxRoaming = 6;
 		zombieClass[] = {"z_soldier","z_soldier_heavy","z_policeman"};
-		lootChance = 0.4;
+		lootChance = 0.3;
 		lootPos[] = {};
 		itemType[] =	{
 			{"M9","weapon"},
@@ -920,27 +928,28 @@ class CfgBuildingLoot {
 	};
 	
 	class Land_army_hut_int : Military {
+		lootChance = 0.4;
 		lootPos[] = {{1.64453,-5.52002,-1.33056},{0.53125,1.72607,-1.36391}};
 	};
 	
 	class Land_garaz_s_tankem : Military {
+		lootChance = 0.4;
 		lootPos[] = {{-6.38477,3.67871,-2.49103},{3.28027,0.556641,-2.49103}};
 	};
 	
 	class Land_army_hut3_long_int : Military {
+		lootChance = 0.4;
 		lootPos[] = {{-1.72803,-0.726563,-1.23617},{-2.26416,-4.87402,-1.23617},{-0.449219,3.71338,-1.23617}};
 	};
 	
 	class Land_army_hut2_int : Military {
+		lootChance = 0.4;
 		lootPos[] = {{0.703369,0.560547,-0.948328},{1.6875,-2.17627,-0.948328}};
 	};
 	
 	class Land_army_hut2 : Military {
+		lootChance = 0.4;
 		lootPos[] = {{0.703369,0.560547,-0.948328},{1.6875,-2.17627,-0.948328}};
-	};
-	
-	class Land_posed : Military {
-		lootPos[] = {{0.0810547,0.408203,0.874388}};
 	};
 	
 	class Land_army_hut_storrage : Industrial { //Military
@@ -948,6 +957,7 @@ class CfgBuildingLoot {
 	};
 	
 	class Land_hlaska : Military {
+		lootChance = 0.5;
 		lootPos[] = {{0,0.79,3.77}};
 	};
 	
@@ -1065,7 +1075,7 @@ class CfgBuildingLoot {
 	class Land_sara_zluty_statek_in : Residential {
 		lootPos[] = {{-8.0752,3.12695,-2.88265},{5.53662,-2.125,-2.91741},{-1.21533,0.908203,-2.88771},{-3.49365,4.92578,-2.87814},{6.77148,0.861328,-2.90053},{2.46338,1.375,-2.89846}};
 	};
-	// Third story map up
+
 	class Land_Hotel : Residential {
 		lootChance = 0.5;
 		lootPos[] = {{-17.9365,17.6123,-7.74672},{-1.02588,9.09961,-7.74672},{-11.6431,-18.4033,-7.74672},{12.2471,-17.6816,-7.74672},{13.5146,1.42383,-7.7467},{17.5029,17.1855,-7.74672},{4.26514,16.3115,-7.74672},{4.68604,9.61719,-7.74672},{3.53467,5.01074,-7.74672},{2.57471,0.442383,-7.74672},{3.58398,-2.65234,-8.00944},{-0.572266,-1.66309,-4.25943},{-17.1128,-4.73145,-4.25943},{-12.4233,-4.13672,-4.25943},{-12.6733,-16.5645,-4.25943},{-17.5176,-13.5488,-4.25943},{-16.9019,12.5859,-4.25943},{-13.2129,17.668,-4.25943},{-8.53662,16.8477,-4.25943},{-3.86768,13.0488,-4.25943},{12.1084,16.7129,-4.25943},{17.0928,13.1836,-4.25943},{17.7715,8.25977,-4.25943},{12.8745,3.32031,-4.25943},{17.0962,-11.957,-4.25943},{12.9512,-17.2568,-4.25944},{8.30176,-17.5576,-4.25944},{3.29736,-12.5918,-4.25944},{-0.941895,-0.0791016,-0.75906},{-12.166,-16.6973,-0.75906},{-16.7827,-13.0938,-0.75906},{-16.5698,-8.72656,-0.75906},{-11.665,-3.43164,-0.75906},{-17.019,12.2656,-0.75906},{-12.7935,17.5166,-0.75906},{-8.92383,17.0908,-0.75906},{-3.53516,13.6943,-0.75906},{11.9971,17.4902,-0.75906},{17.5825,12.7646,-0.75906},{17.8564,8.1582,-0.75906},{12.6943,3.24414,-0.75906},{17.5063,-12.5947,-0.75906},{12.314,-17.7178,-0.759064},{8.69678,-17.3955,-0.759064},{3.09521,-12.3662,-0.759064},{3.61914,4.39551,-0.75906},{3.5166,4.16699,-4.25943},{-0.753418,-0.841797,2.74081},{-12.2056,-17.457,2.74081},{-17.3398,-12.625,2.74081},{-17.3315,-8.61719,2.74081},{-12.5444,-3.09766,2.74081},{-17.9858,12.7178,2.74081},{-12.1934,17.4053,2.74081},{-8.47217,17.5635,2.74081},{-3.58838,13.0947,2.74081},{12.0166,17.1836,2.74081},{17.3477,12.9678,2.74081},{17.7378,8.63086,2.74081},{12.4536,3.00586,2.74081},{17.3003,-11.9092,2.74081},{12.6323,-17.5693,2.74081},{9.22412,-17.1357,2.74081},{3.8418,-12.7959,2.74081},{3.31885,4.92676,2.74081},{-1.16211,-1.23242,6.24485},{-15.6294,-15.5459,6.24485},{-15.8813,14.96,6.24485},{15.6616,15.9541,6.24485},{16.6475,-15.9473,6.24485}};
@@ -1173,6 +1183,7 @@ class CfgBuildingLoot {
 		lootPos[] = {{1.75781,-7.79785,-3.0332},{-2.80469,-2.53906,-3.0332},{-7.43555,8.79199,-3.0332},{-5.18359,-1.56348,-3.0332},{5.01953,8.36328,-3.0332},{4.43945,-7.30469,-3.0332}};
 	};
 	class Land_vez : Military {
+		lootChance = 0.5;
 		lootPos[] = {{0.00292969,1.54297,1.36331}};
 	};
 	/*
@@ -1249,17 +1260,19 @@ class CfgBuildingLoot {
 		lootPos[] = {{-2.69922,-7.57422,-9.47058},{-0.892578,-5.7168,-9.47058},{-3.2417,-6.61914,-4.6489},{-1.35645,-8.3623,-4.6489},{-1.70801,-7.85449,-0.0437927},{-3.39502,-7.88281,-0.0437927},{-1.396,-7.79883,4.41141},{-1.37939,-5.79102,4.41141},{1.5127,1.96484,-9.47058},{18.9058,-4.06738,-9.47058}};
 	};
 	class Land_Mil_ControlTower: Military {
-		lootChance = 0.4;
+		lootChance = 0.3;
 		lootPos[] = {{10.0703,3.76367,-9.62869},{3.89844,3.43457,-5.46368},{1.75195,5.68164,-5.46368},{6.66113,-0.625488,-1.0687},{2.63965,-0.191406,-1.0687},{6.72266,3.23389,-1.0687}};
 	};
 	class Land_sara_domek_podhradi_1: Residential {
 		lootPos[] = {{2.44629,-3.04883,-2.75808},{-4.83398,-3.44531,-2.75808},{-5.2259,1.2666,-2.75808}};
 	};
 	class Land_Budova4_in: Military {
+		lootChance = 0.3;
 		maxRoaming = 3;
 		lootPos[] = {{-5.79492,2.49512,-1.88723},{-1.90234,2.25684,-1.88723},{1.76758,2.41406,-1.88723},{5.89063,-2.04785,-1.88723}};
 	};
 	class Land_SS_hangar: Military {
+		lootChance = 0.4;
 		maxRoaming = 3;
 		lootPos[] = {{11.7344,-17.165,-5.87253},{-11.7158,-18.9541,-5.87253},{-14.2461,23.0439,-5.87253},{-14.5156,-18.9631,-5.87253}};
 	};
@@ -1309,7 +1322,7 @@ class CfgBuildingLoot {
 		lootPos[] = {{-11.6309,7.2052,-5.55933},{-12.0674,2.56909,-5.55933},{-4.89355,6.6394,-5.55933},{-3.74121,2.90393,-3.89665},{-12.8672,1.44519,-2.23135},{-12.415,8.1311,-2.23135},{-12.7236,4.11255,-2.23135},{-3.99805,8.9801,-2.23156},{-7.33105,8.44214,-2.23156},{-4.55371,5.22644,-2.23156},{-11.4746,2.92114,1.66661},{-11.0703,8.13818,1.66661},{-4.67578,7.32678,1.62174},{-2.68262,3.44763,3.4243},{-13.1953,-8.95862,3.4243},{-8.80859,-0.443481,0.401226},{-12.1328,-0.149414,0.424298},{-2.03418,6.61414,-5.55933},{0.239258,1.72278,-5.59793},{6.22461,-3.948,-4.61825},{-6.39355,-8.24353,-5.59541},{-10.8496,-6.91211,-5.56572},{-6.77637,-1.73083,-5.56019}};
 	};
 	class Land_rail_station_big: Office {
-		lootPos[] = {{-4.97266,4.55737,-4.50436},{0.458496,4.85229,-4.50436},{2.4624,2.21851,-4.50436},{-1.32373,-2.60571,-4.50436},{-3.29443,-0.121826,-4.50436},{-1.07764,2.36646,-4.50436},{7.46045,-3.41528,-4.50436},{8.93408,3.1189,-4.50436},{-8.16357,-5.12842,-4.50436}};
+		lootPos[] = {{-4.97266,4.55737,-4.98},{0.458496,4.85229,-4.98},{2.4624,2.21851,-4.98},{-1.32373,-2.60571,-4.98},{-3.29443,-0.121826,-4.98},{-1.07764,2.36646,-4.98},{7.46045,-3.41528,-4.98},{8.93408,3.1189,-4.98},{-8.16357,-5.12842,-4.98}};
 	};
 	class Land_Ind_Vysypka: Industrial {
 		lootPos[] = {{0.486084,4.95459,-4.96861},{1.08032,-0.406738,-4.96801},{-0.0354004,-10.8208,-4.96686},{-5.07788,-16.4624,-4.96759},{-6.30298,2.92969,-4.96838},{-6.26685,26.7349,-4.9772},{1.64697,23.4038,-4.97097},{7.14575,3.92529,-4.96972},{4.63599,-12.1621,-4.96971}};
@@ -1358,6 +1371,7 @@ class CfgBuildingLoot {
 		lootPos[] = {{-0.982422,-1.92627,-2.21573},{-2.01782,-4.2417,-2.21918},{-0.759277,1.42139,-2.21573}};
 	};
 	class Land_Mil_House: Military {
+		lootChance = 0.3;
 		vehPos[] = {{13.439,3.25244,-5.71244,84}};
 		lootPos[] = {{12.457,1.4248,-5.81439},{11.0391,4.85278,-5.81439},{13.667,4.42139,-5.81439}};
 	};
@@ -1453,16 +1467,19 @@ class CfgBuildingLoot {
 	}; // Qty: 56
 
 	class Camp: Military {
+		lootChance = 0.3;
 		maxRoaming = 1;
-		lootPos[] = {{0.833252,-1.52246,-1.15955},{0.38501,0.963867,-1.15955}};
+		lootPos[] = {{0.833252,-1.52246,-1.176},{0.38501,0.963867,-1.176}};
 	}; // Qty: 1
 
 	class CampEast: Military {
 		maxRoaming = 1;
+		lootChance = 0.3;
 		lootPos[] = {{-1.05713,-1.80762,-1.31049},{0.627441,1.83398,-1.31049}};
 	}; // Qty: 1
 	class CampEast_EP1: Military {
 		maxRoaming = 1;
+		lootChance = 0.3;
 		lootPos[] = {{-0.670898,0.95459,-1.31049},{1.68506,-2.43384,-1.31049},{-1.76318,-1.62646,-1.31049}};
 	}; // Qty: 1
 
@@ -1668,6 +1685,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ1 Total: 16
 	class EMLZ2 {
 		position[] = {13508.527, 16287.334};
 		size = 3000;
@@ -1877,7 +1895,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 		class Object34 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {12219.451,17744.943,-0.033680286};
 			direction = -87.940636;
 			SetZUp = 1;
@@ -2087,6 +2105,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ2 Total: 69
 	class EMLZ3 {
 		position[] = {17841.162, 13019.341};
 		size = 2750;
@@ -2272,6 +2291,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ3 Total: 30
 	class EMLZ4 {
 		position[] = {16090.729, 9587.1191};
 		size = 2000;
@@ -2331,6 +2351,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ4 Total: 9
 	class EMLZ5 {
 		position[] = {12505.881, 10952.824};
 		size = 2000;
@@ -2438,6 +2459,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ5 Total: 17
 	class EMLZ6 {
 		position[] = {9737.9395, 7844.0952};
 		size = 1200;
@@ -2527,31 +2549,31 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 		class Object14 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14277.733,12731.597,-0.01};
 			direction = -101.5187;
 			SetZUp = 1;
 		};
 		class Object15 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14278.93,12725.351,-0.01};
 			direction = -102.18977;
 			SetZUp = 1;
 		};
 		class Object16 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14280.389,12718.989,-0.01};
 			direction = -102.56635;
 			SetZUp = 1;
 		};
 		class Object17 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14281.788,12712.48,-0.01};
 			direction = -102.56635;
 			SetZUp = 1;
 		};
 		class Object18 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14283.073,12706.212,-0.01};
 			direction = -102.56635;
 			SetZUp = 1;
@@ -2569,19 +2591,19 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 		class Object21 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14260.153,12707.241,-0.01};
 			direction = 78.151505;
 			SetZUp = 1;
 		};
 		class Object22 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14258.528,12713.731,-0.01};
 			direction = 78.151505;
 			SetZUp = 1;
 		};
 		class Object23 {
-			Type="MASH";
+			Type="Camp";
 			position[] = {14257.203,12719.968,-0.01};
 			direction = 78.151505;
 			SetZUp = 1;
@@ -2606,7 +2628,7 @@ class CfgTownGeneratorSara {
 		};
 		class Object27 {
 			Type="Land_A_BuildingWIP";
-			position[] = {13824.438,12821.023,0.28120998};
+			position[] = {13813.914,12821.889,0.28120998};
 			direction = -264.93076;
 			SetZUp = 1;
 		};
@@ -2618,8 +2640,8 @@ class CfgTownGeneratorSara {
 		};
 		class Object29 {
 			Type="Land_A_Hospital";
-			position[] = {14088.811,12448.2,-0.01};
-			direction = 158.0571;
+			position[] = {14092.694,12442.81,-0.0099999998};
+			direction = 153.99374;
 			SetZUp = 1;
 		};
 		class Object30 {
@@ -2635,6 +2657,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ6 Total: 32
 	class EMLZ7 {
 		position[] = {13373.855, 8715.9863};
 		size = 1500;
@@ -2796,6 +2819,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//EMLZ7 Total: 26
 	class WMLZ1 {
 		position[] = {7483.5483, 8740.6846};
 		size = 2750;
@@ -2831,6 +2855,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//WMLZ1 Total: 5
 	class WMLZ2 {
 		position[] = {10256.928, 10019.207};
 		size = 1850;
@@ -2980,6 +3005,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//WMLZ2 Total: 24
 	class WMLZ3 {
 		position[] = {12007.973, 6930.9556};
 		size = 1800;
@@ -3069,6 +3095,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//WMLZ3 Total: 14
 	class WMLZ4 {
 		position[] = {10791.405, 5391.6064};
 		size = 1500;
@@ -3134,6 +3161,7 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//WMLZ4 Total: 10
 	class WMLZ5 {
 		position[] = {8694.2754, 5947.1602};
 		size = 1600;
@@ -3307,4 +3335,6 @@ class CfgTownGeneratorSara {
 			SetZUp = 1;
 		};
 	};
+	//WMLZ5 Total: 28
+	//Total Buildings: 280
 };
